[package]
name = "is-alive-middleware"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { branch = "0.2.5", git = "https://github.com/MyJetTools/my-http-server.git" }
rust-extensions = { branch = "0.1.0", git = "https://github.com/MyJetTools/rust-extensions.git" }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
